--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@google/genai": "^1.3.0",
+    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
