--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
+    "@types/d3": "^7.4.3",
     "@types/pg": "^8.15.2",
+    "d3": "^7.9.0",
     "pdfjs-dist": "3.11.174",
     "pg": "^8.16.0",
     "react": "^19.0.0",
