--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google/genai": "^1.3.0",
     "@google/generative-ai": "^0.24.1",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
@@ -22,7 +24,8 @@
     "pdfjs-dist": "3.11.174",
     "pg": "^8.16.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
